--- a/css/activity.css
+++ b/css/activity.css
@@ -1,9 +1,9 @@
 .acti {
-    display: none;
+    display: block;
 }
 .acti-fn {
     padding-left: 80px;
-    width: 944px;
+    min-width: 944px;
     height: 60px;
     line-height: 60px;
     background-color: #33a09a;
@@ -44,9 +44,9 @@
     color: #fff;
 }
 .acti-main {
-    width: 100%;
-    height: 660px;
-    overflow-y: scroll;
+    min-width: 1024px;
+    // height: 660px;
+    // overflow-y: scroll;
 }
 .activities,
 .interview {
@@ -68,6 +68,9 @@
 .acti-modi,
 .acti-dele {
     margin-right: 20px;
+}
+.acti-details {
+    display: none;
 }
 .acti-details > h2,
 .acti-details > h3 {
